deps/v8/test/message/regress/regress-3995.out
# Copyright 2015 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

*%(basename)s:6: Error: boom
  throw new Error("boom");
  ^
Error: boom
    at *%(basename)s:6:9
    at *%(basename)s:7:3
